hphp/hack/test/typecheck/property_declaration_missing_visibility_modifier.php
<?hh // partial
class C {
  int $x;
}
